# dissonance-field-synthesis

./: .gitignore  E156-PROTOCOL.md  README.md  pyproject.toml
data/mra_hfpef/: MANIFEST.json  aldo_dhf.json  fidelio_hf_subgroup.json  figaro_hf_subgroup.json  fineartshf.json  topcat_americas.json  topcat_russia_georgia.json
dfs/: __init__.py  adherence_proxy.py  config.py  conservation.py  decisions.py  diagnostics.py  dissonance.py  feasibility.py  field_constrained.py  field_unconstrained.py  hyperparam.py  kernel.py  manifest.py  mind_change.py  outputs.py  safety.py  schema.py
docs/: conservation_law_wiring_status.md
manuscript/: README.md  figures.md  main.md  methods_supplement.md  phase2_subgroup_swap_results.csv  references.bib  sensitivity_kernel_results.csv  sensitivity_restarts_results.csv  sensitivity_results.csv  sensitivity_supplement.md
scripts/: extract_aact_mra.py  phase2_subgroup_anchor_swap.py  run_dfs.py  sensitivity_adherence.py  sensitivity_kernel.py  sensitivity_restarts.py
tests/: conftest.py  test_adherence_proxy.py  test_conservation.py  test_conservation_detection.py  test_decisions.py  test_dissonance.py  test_dissonance_resolution.py  test_feasibility.py  test_field_constrained.py  test_field_unconstrained.py  test_hyperparam.py  test_integration_contract.py  test_kernel.py  test_loo_fineartshf.py  test_ma_equivalence.py  test_manifest.py  test_mind_change.py  test_outputs.py  test_prereqs.py  test_real_data_fixtures.py  test_run_dfs.py  test_safety_field.py  test_schema.py  test_sensitivity.py
(+2 files in other folders)
