[project]
name = "dissonance-field-synthesis"
version = "0.1.0"
description = "Dissonance Field Synthesis — POC on MRA in HFpEF"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "cvxpy>=1.5",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dfs*"]
exclude = ["tests*", "scripts*"]
